fix(Issue-1801): JGiven now can handle null parameters from JUnit5
According to the test description this only shows up when the null value is in the second argument. I didn't quite understand why this is the case. But since the distincition between the first and subsequent cases is important, I've added a respective case.

Signed-off-by: l-1squared <30831153+l-1squared@users.noreply.github.com>